--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -51,6 +52,11 @@
             android:name=".PickerActivity"
             android:label="@string/title_activity_picker" >
         </activity>
+        <activity
+            android:name=".FriendPickerApplication"
+            android:label="@string/title_activity_application" >
+        </activity>
+        
     </application>
 
 </manifest>
