--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\..\\..\\Android\\Workspace\\FacebookSDK
+android.library.reference.1=..\\..\\Downloads\\facebook-android-sdk-3.22.0\\facebook
+android.library.reference.2=../FacebookSDK
