--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        
         <activity android:name="com.facebook.LoginActivity" />
         <activity
             android:name=".MainActivity"
@@ -27,6 +29,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
+        
         <activity
             android:name=".RentPage"
             android:label="@string/title_activity_rent_page" >
@@ -56,6 +65,7 @@
             android:name=".FriendPickerApplication"
             android:label="@string/title_activity_application" >
         </activity>
+		
         
     </application>
 
